Fix width on ios

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -32,7 +32,7 @@ footer, header, hgroup, menu, nav, section {
 
 html, body {
 	height: 600vh;
-	max-width: 100%;
+	max-width: 100vw;
 	cursor: url(/images/cursor.png), auto;
 }
 
